forgot to add a

--- a/_posts/2015-02-12-execve.markdown
+++ b/_posts/2015-02-12-execve.markdown
@@ -70,7 +70,7 @@ Let's try it out:
 
 Looks like it worked :)
 
-execve can also handle scripts that start with line like:
+execve can also handle scripts that start with a line like:
 
     #! interpreter [optional-arg]
 
